[package]
name = "gpui_ios"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "Apache-2.0"

[lints]
workspace = true

[lib]
path = "src/lib.rs"
crate-type = ["rlib", "staticlib"]

[features]
default = []
font-kit = ["gpui/font-kit", "dep:font-kit", "dep:smallvec"]

[dependencies]
gpui.workspace = true
gpui_apple.workspace = true

[target.'cfg(target_os = "ios")'.dependencies]
gpui_examples.workspace = true
gpui_metal.workspace = true
anyhow.workspace = true
block = "0.1"
collections.workspace = true
core-foundation.workspace = true
core-foundation-sys.workspace = true
core-graphics = "0.24"
core-text = "=21.0.0"
ctor.workspace = true
foreign-types = "0.5"
futures.workspace = true
libc.workspace = true
log.workspace = true
metal.workspace = true
objc.workspace = true
oslog = "0.2"
parking_lot.workspace = true
pathfinder_geometry = "0.5"
raw-window-handle = "0.6"
smallvec = { workspace = true, optional = true }
uuid.workspace = true
font-kit = { git = "https://github.com/zed-industries/font-kit", rev = "110523127440aefb11ce0cf280ae7c5071337ec5", package = "zed-font-kit", version = "0.14.1-zed", optional = true }
